# 2004scape-server

./: .gitignore  package.json  settings.gradle.kts
data/pack/: loc.pack
data/src/pack/: seq.pack
data/src/scripts/: engine.rs2
data/src/scripts/_unpack/: all.loc  all.npc  all.seq
data/src/scripts/login_logout/: login.rs2
game/: build.gradle.kts
jagex2/: build.gradle.kts
runescript-runtime/: Cargo.toml
runescript-runtime/.run/: Build.run.xml
runescript-runtime/src/: coord_grid.rs  core_ops.rs  debug_ops.rs  lib.rs  loc_ops.rs  math_ops.rs  npc_ops.rs  obj_ops.rs  player_ops.rs  script.rs  server_ops.rs  string_ops.rs  trig.rs
session/: build.gradle.kts
socket/: build.gradle.kts
src/engine/: World.ts
src/engine/entity/: NetworkPlayer.ts  Npc.ts  Player.ts
src/engine/entity/tracking/: InputTracking.ts  ReportEvent.ts
src/lostcity/cache/: CategoryType.ts  Component.test.ts  Component.ts  DbRowType.ts  DbTableType.ts  EnumType.ts  FloType.ts  FontType.ts  HuntType.ts  IdkType.ts  InvType.ts  LocType.ts  MesanimType.ts  NpcType.ts  ObjType.ts  ParamType.ts  SeqType.ts  SpotanimType.ts  StructType.ts  VarNpcType.ts  VarPlayerType.ts  VarSharedType.ts
src/lostcity/cache/config/: VarPlayerType.ts
src/lostcity/engine/: Engine.ts  GameMap.ts  Inventory.ts  World.ts
src/lostcity/engine/zone/: Zone.ts  (+2 more)
src/lostcity/entity/: EntityQueueRequest.ts  EntityTimer.ts  NetworkPlayer.ts  Npc.ts  PathingEntity.ts  Player.ts  PlayerLoading.ts
src/lostcity/server/: ServerProt.ts
tcp/: build.gradle.kts
tools/server/: headless.ts
ws/: build.gradle.kts
(+159 files in other folders)
