[package]
name = "runescript-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--generate-global-effects",
    "--optimize-instructions",
    "--memory-packing",
    "--intrinsic-lowering",
    "--flexible-inline-max-function-size",
    "4294967295",
    "--inlining",
    "--inlining-optimizing",
    "-O4",
]