[package]
name = "runescript-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
serde-wasm-bindgen = "0.6.5"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
once_cell = "1.20.2"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--generate-global-effects",
    "--optimize-instructions",
    "--memory-packing",
    "--intrinsic-lowering",
    "--flexible-inline-max-function-size",
    "4294967295",
    "--inlining",
    "--inlining-optimizing",
    "-O4",
]